--- a/styles.css
+++ b/styles.css
@@ -116,4 +116,37 @@ h1 {
         transition-property: initial;
     }
 
+@media screen and (min-device-width: 320px) and (max-device-width: 1081px)
+{
+
+    h1{
+        font-size: 60px;
+    }
+
+    .input-container input{
+        font-size: 20px;
+        padding: 20px;
+    }
+
+    .input-container button{
+        font-size: 20px;
+    }
+
+    .tasks-container li{
+        font-size: 20px;
+        padding: 20px 10px;
+    }
+
+    .tasks-container h2{
+        font-size: 40px;
+    }
+
+    .tasks-container li .delete-task-button{
+        font-size: 20px;
+    }
+
+
+}
+
+
 
