--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,7 @@ h1 {
         
     }
   .tasks-container {
-    max-width: 600px;
+    max-width: 720px;
     margin: 0 auto;
   }
   
@@ -120,21 +120,28 @@ h1 {
 {
 
     h1{
-        font-size: 60px;
+        font-size: 80px;
     }
 
     .input-container input{
         font-size: 20px;
-        padding: 20px;
+        padding: 30px;
+        border-radius: 1em;
     }
 
     .input-container button{
         font-size: 20px;
+        
+        padding: 30px 25px;
+        border-radius: 1em;
     }
 
     .tasks-container li{
         font-size: 30px;
-        padding: 25px 10px;
+        padding: 30px 10px;
+        margin: 1em 0;
+        border-radius: 0.7em;
+        
         
     }
 
@@ -144,8 +151,9 @@ h1 {
 
     .tasks-container li .delete-task-button{
         font-size: 20px;
-        padding: 10px 10px;
+        padding: 15px 13px;
         margin-right:10px;
+        border-radius: 0.7em;
     }
 
     .tasks-container li input[type="checkbox"]{
@@ -164,6 +172,13 @@ h1 {
     .input-container {
         margin:30px 0;
     }
+
+    .tasks-container {
+        max-width: 90%;
+        margin: 0 auto;
+        padding:25px 0;
+      }
+      
 }
 
 
